fix design on mobile

--- a/style.css
+++ b/style.css
@@ -508,7 +508,7 @@ body{
     }
 }
 
-@media(max-width:550px){
+@media(max-width:667px){
     .simulatorContainer{
         padding:0.2em;
     }
@@ -591,7 +591,7 @@ body{
         width:97%!important;
     }
     #simulatorContainer .amountInvestedContainer{
-        padding:5px;
+        padding:3% 35px;
     }
     #simulatorContainer .col{
         padding:5px 12px;
@@ -636,5 +636,8 @@ body{
     }
     #simulatorContainer .inputContainer{
         flex-direction:column;
+    }
+    #simulatorContainer .amountInvestedContainer{
+        padding:15px;
     }
 }
